# HexPrismWebGPU

./: .gitignore  CMakeLists.txt  CMakePresets.json  run.ps1  vcpkg-configuration.json  vcpkg.json
src/: Camera.cpp  Camera.hpp  HexGrid.cpp  HexGrid.hpp  HexPrismMesh.cpp  HexPrismMesh.hpp  InputController.cpp  InputController.hpp  Prism.hpp  ProceduralTerrain.cpp  ProceduralTerrain.hpp  Settings.hpp  WebGpuRenderer.cpp  WebGpuRenderer.hpp  WebGpuRenderer2.cpp  main.cpp
